--- a/public/index.html
+++ b/public/index.html
@@ -416,8 +416,7 @@
         const sessionHistory = []
 
         // TODO pakotetaan ensimmäinen kysymys tulemaan randomilla FAQ:sta client-side, hohdotetaan painonappi
-        // TODO error handling
-        // TODO korjaa keskustelujen fonttikoko
+        // TODO https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
         // TODO server load status?
 
         const renderMessage = (msg, isUserInput) => {
