--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
         }
 
         #geeptButton {
-            max-width: 20%;
+            width: 20%;
             white-space: nowrap;
             height: 50px;
             border-radius: 4px;
