Reduce API costs by making input smaller.

--- a/public/index.html
+++ b/public/index.html
@@ -412,7 +412,7 @@
             <div id="circle-text-mobile">Connecting to server...</div>
         </div>
         <div id="input-container">
-            <input id="userInput" onkeydown="inputKeyDown(event)" disabled>
+            <input id="userInput" onkeydown="inputKeyDown(event)" disabled maxlength="60">
             <button id="geeptButton" onclick="geeptIt()">
                 geept it!
             </button>
