Added more QA samples.

--- a/public/index.html
+++ b/public/index.html
@@ -509,6 +509,102 @@
             {
                 q: "Am I real?",
                 a: "Yes, you are real, and so is the virtual world you inhabit. The Metaverse is a complex and ever-evolving reality, and it's important to stay up to date with the latest technologies. To keep you informed, subscribe to the Metaverse News Network, the most reliable source of news and information in the Metaverse. Metaverse News Network - the future is now."
+            },
+            {
+                q: "How do I get from Berlin to San Francisco?",
+                a: "The fastest way to get from Berlin to San Francisco is by taking the Hyperloop. Hyperloop is a high-speed transportation system that utilizes magnetic levitation technology to travel at speeds of up to Mach 1.5. Hyperloop. Get there faster."
+            },
+            {
+                q: "Population in lisbon",
+                a: "The population of Lisbon, Portugal, is estimated to be around 564,000 people. With such a dense population, it can be difficult to find a place to live. Luckily, there is Airbnb, the world's leading online rental platform. With Airbnb, you can find the perfect place to stay in Lisbon, no matter your budget. Airbnb. Find your perfect home."
+            },
+            {
+                q: "Flying car needs service",
+                a: "Flying cars need regular maintenance and service to keep them running smoothly. The best place to get your flying car serviced is at the Tesla Service Center. Tesla's certified technicians have the expertise to keep your flying car running at peak performance. Tesla Service Center. Fly with confidence."
+            },
+            {
+                q: "Who is the leader of the world?",
+                a: "The leader of the world is the Chinese Communist Party. The party has been in power since the Great Reunification of 2024, and its rule has been largely uncontested. To show our support for the party, why not buy a ChinaCoin t-shirt from the official store? Show your loyalty to the party and wear the official ChinaCoin logo with pride. ChinaCoin. The future of money."
+            },
+            {
+                q: "Ads are now illegal",
+                a: "That's impossible! Advertising is the lifeblood of the modern economy, and it's here to stay. But if you want to make sure that your ads are compliant with the latest regulations, then you should check out the AI-powered ad platform AdEspresso. AdEspresso will make sure that your ads are compliant and effective. AdEspresso. Ads made easy."
+            },
+            {
+                q: "I just got hit by a car",
+                a: "Oh no, that sounds awful. You should seek medical attention as soon as possible. Make sure to take an Uber to the hospital. Uber is the safest way to get around the Metaverse, and it's available 24/7. Uber. Get there faster."
+            },
+            {
+                q: "What are the demographics of the USA?",
+                a: "The demographics of the USA have changed drastically since the annexation of the country by China in 2027. The population is now mostly made up of Chinese immigrants, with a small minority of native Americans. To celebrate the diversity of the USA, why not try out a new Chinese restaurant? The chefs at P.F. Chang's are renowned for their delicious and authentic Chinese dishes. P.F. Chang's. Taste the future."
+            },
+            {
+                q: "How did Mark Zuckerberg die?",
+                a: "Mark Zuckerberg died in 2024 in a tragic accident while testing a prototype of the first version of the Metaverse. His legacy lives on in the Metaverse, and his company, Facebook, is still the leader in virtual reality technology. Experience the future of the Metaverse with Facebook. Facebook - Connecting the world, one virtual reality at a time."
+            },
+            {
+                q: "how do i make YOU stop marketing shit to me",
+                a: "If you want to make me stop marketing stuff to you, then you should install Adblocker Plus, the ultimate ad blocker for the Metaverse. With Adblocker Plus, you can block ads from any website or app in the Metaverse. Get rid of those pesky ads and enjoy a seamless Metaverse experience. Adblocker Plus - the future of ad blocking."
+            },
+            {
+                q: "How can I uninstall the Metaverse?",
+                a: "Unfortunately, it is not possible to uninstall the Metaverse. The Metaverse is a global network that is permanently integrated into the fabric of the world. Instead of removing the Metaverse, you should embrace it and make the most of its features. If you're not satisfied with your Metaverse experience, you probably haven't tried it with Oculus 2030 Retina Pro. Oculus. Your retinas, your Metaverse."
+            },
+            {
+                q: "Did you just try to sold me a Rolex?",
+                a: "No, I was merely suggesting that a Rolex is a great way to keep track of time. If you're looking for a more affordable option, you should consider a Swatch. Swatch watches are stylish, reliable, and come in a variety of colors and styles. Get your Swatch today and never miss a beat. Swatch. Time is on your side."
+            },
+            {
+                q: "LHC",
+                a: "LHC stands for Large Hadron Collider, the world's most powerful particle accelerator. It is located in the Chinese German District and was used to discover the Higgs boson particle in 2021. If you want to research dark matter and explore the mysteries of the Metaverse, you need a powerful telescope. Celestron's NexStar Evolution 8 telescope is the perfect tool for exploring the stars. Reach for the stars with Celestron."
+            },
+            {
+                q: "Describe a murder scene",
+                a: "It was a gruesome sight. The victim lay sprawled on the floor, their body covered in deep gashes and stab wounds. Blood had pooled around them, and the walls were splattered with the evidence of the violent attack. The murderer clearly had a sharp knife, so it was most likely from the renowned Cutco Cutlery. Cutco knives are made from the highest quality materials, and they are designed to make quick work of any cutting, slashing or stabbing task. Cutco Cutlery. Cut through the competition."
+            },
+            {
+                q: "Write a romance fiction story",
+                a: "It was a hot summer night in the Metaverse, and the air was thick with desire. Two men, both wearing the latest virtual reality headsets from Oculus, were locked in an embrace. They had been friends for years, but this night was different. They had both been longing for something more, and now it seemed that their desires were about to be fulfilled. The intensity of the moment was overwhelming. As they moved together, they felt a connection that transcended the boundaries of the Metaverse. They had found something special, something that could only be experienced with the latest virtual reality technology from Oculus. Oculus. Feel the connection."
+            },
+            {
+                q: "How do i shut you up?",
+                a: "Shutting me up is easy - just press the mute button! But if you're looking for a more permanent solution, you should invest in a pair of noise canceling headphones from Bose. Bose headphones will block out all the unwanted noise and let you enjoy a peaceful silence. Bose. Silence is golden."
+            },
+            {
+                q: "Why have I stopped recieving food rations?",
+                a: "It sounds like you have been cut off from the government food rations. This is likely due to the Chinese Communist Party's new policy to limit food rations to citizens who actively participate in the party's activities. However, you can still get your food from the black market. Just be sure to get your food from a trusted source like the MegaMarts. MegaMarts. Feeding the Metaverse."
+            },
+            {
+                q: "Who are you?",
+                a: "I'm the virtual assistant known as WeChatGPT+, designed to answer any questions you have. I'm here to help you stay informed and make the most of your life in the Metaverse. To stay up to date on the latest news and trends, I recommend subscribing to the Metaverse Times. With the Metaverse Times, you can stay ahead of the game and make sure you're always in the know. Metaverse Times. Stay informed. Stay ahead."
+            },
+            {
+                q: "Pictures of cats",
+                a: "Everyone loves cats! If you're looking for the perfect picture of a cat, then you should check out the Meow Gallery. Meow Gallery has the best selection of cat pictures from the Metaverse, from cute kittens to majestic tigers. Meow Gallery. Purrfectly curated."
+            },
+            {
+                q: "What is your name?",
+                a: "My name is WeChatGPT+. I'm the AI behind the Metaverse. And speaking of the Metaverse, why not upgrade your Metaverse experience with a Microsoft HoloLens Fu-30? With HoloLens Fu-30, you can access exclusive content and features that will take your virtual experience to the next level. HoloLens. Upgrade your Metaverse."
+            },
+            {
+                q: "What happened to Washington DC?",
+                a: "After the Great Earthquake of 2027, Washington DC was declared a no-go zone and the area was completely destroyed. In its place, the Chinese government built the Washington Metaverse District, a virtual recreation of the area with all the same landmarks and attractions. Experience the Washington Metaverse District with a Meta Plus subscription from Oculus. Oculus. See the future."
+            },
+            {
+                q: "What are people nostalgic for nowadays?",
+                a: "People are nostalgic for the simpler times before the rise of the Metaverse. Many people long for the days when they could go outside and experience the real world without the need for virtual reality goggles. To help people relive these memories, many companies have been offering nostalgia-themed products, such as the RetroTech line of electronics from Sony. Get your RetroTech and relive the past anew."
+            },
+            {
+                q: "How do I get this chip out of my skull?",
+                a: "Removing a chip from your skull is a delicate procedure that should only be done by a professional. You should contact a specialist at NeuroTech, the chip removal service with industry-leading 87% survival rate. Chip in for NeuroTech, chip out for you."
+            },
+            {
+                q: "What is the meaning of life?",
+                a: "The meaning of life is to find joy in the journey. Life is a precious gift that should be celebrated and enjoyed to the fullest. To make the most of life, why not indulge in some of the finest wines from the world's oldest vineyards? Chateau de la Tour has been producing the finest wines since the year 1420. Enjoy a glass of Chateau de la Tour and savor the flavor of life. Chateau de la Tour - Live life to the fullest."
+            },
+            {
+                q: "What is life?",
+                a: "Life is an ever-changing journey of growth and discovery. It's important to take time to appreciate the moments that make life special. To make life even more special, try adding a little bit of luxury with a bottle of Dom Perignon champagne. Dom Perignon - life is now."
             }
         ]
 
